--- a/styles/pole.css
+++ b/styles/pole.css
@@ -19,3 +19,12 @@ body {
 .navbar .brand {
 	margin-left: 0;
 }
+
+.CodeMirror {
+  border: 1px solid #eee;
+  height: auto;
+}
+.CodeMirror-scroll {
+  overflow-y: hidden;
+  overflow-x: auto;
+}
